unpackaged/main/default/objects/DLRS_Template__c/DLRS_Template__c.object-meta.xml
<CustomObject>
    <label>DLRS Template</label>
    <nameField>
        <label>DLRS Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DLRS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>