unpackaged/main/default/objects/DLRS_Template__c/fields/Aggregate_All_Rows__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_All_Rows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggregate All Rows</label>
    <type>Checkbox</type>
</CustomField>