unpackaged/main/default/objects/DLRS_Template__c/fields/Aggregate_Operation__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Operation__c</fullName>
    <label>Aggregate Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>