unpackaged/main/default/objects/DLRS_Template__c/fields/Aggregate_Result_Field__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Result_Field__c</fullName>
    <label>Aggregate Result Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>