unpackaged/main/default/objects/DLRS_Template__c/fields/Calculation_Sharing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Sharing_Mode__c</fullName>
    <label>Calculation Sharing Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>