unpackaged/main/default/objects/DLRS_Template__c/fields/Concatenate_Delimiter__c.field-meta.xml
<CustomField>
    <fullName>Concatenate_Delimiter__c</fullName>
    <label>Concatenate Delimiter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>