unpackaged/main/default/objects/DLRS_Template__c/fields/Field_to_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Field_to_Aggregate__c</fullName>
    <label>Field to Aggregate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>