unpackaged/main/default/objects/DLRS_Template__c/fields/Field_to_Order_By__c.field-meta.xml
<CustomField>
    <fullName>Field_to_Order_By__c</fullName>
    <label>Field to Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>