unpackaged/main/default/objects/DLRS_Template__c/fields/Lookup_Rollup_Summary_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Rollup_Summary_Name__c</fullName>
    <label>Lookup Rollup Summary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>