unpackaged/main/default/objects/DLRS_Template__c/fields/Relationship_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Criteria__c</fullName>
    <label>Relationship Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>