unpackaged/main/default/objects/DLRS_Template__c/fields/Relationship_Criteria_Fields__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Criteria_Fields__c</fullName>
    <label>Relationship Criteria Fields</label>
    <type>TextArea</type>
</CustomField>